Wrong Znormal translate using bpy.ops.transform.translate #46741

Closed
opened 2015-11-10 09:16:44 +01:00 by Nicola · 8 comments

System Information
Windows 10 x64, Nvidia gtx970

Blender Version
Broken: 2.76.2 f337fea

Short description of error
When I try to move some faces of a mesh along Z normal axis using "bpy.ops.transform.translate(value=(0, 0, 10), constraint_axis=(False, False, True), constraint_orientation='NORMAL')" give a wrong result.
As show in the image, it doesn't work as expected (Icosphere.001 is edited by modeling by hand with same Z distance)

Exact steps for others to reproduce the error

ZNormal_Translate.PNG

**System Information** Windows 10 x64, Nvidia gtx970 **Blender Version** Broken: 2.76.2 f337fea **Short description of error** When I try to move some faces of a mesh along Z normal axis using "bpy.ops.transform.translate(value=(0, 0, 10), constraint_axis=(False, False, True), constraint_orientation='NORMAL')" give a wrong result. As show in the image, it doesn't work as expected (Icosphere.001 is edited by modeling by hand with same Z distance) **Exact steps for others to reproduce the error** ![ZNormal_Translate.PNG](https://archive.blender.org/developer/F253926/ZNormal_Translate.PNG)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Campbell Barton was assigned by Nicola 2015-11-10 09:16:44 +01:00
Author

Added subscriber: @NicolaFrascati

Added subscriber: @NicolaFrascati

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Please always test with the latest release, this is working in 2.77.

~~Please always test with the latest release, this is working in 2.77.~~
Author

where can i find 2.77?

I've tested until 2.76 8c84a18, latest at https://builder.blender.org/download/

where can i find 2.77? I've tested until 2.76 8c84a18, latest at https://builder.blender.org/download/

As sorry, my mistake (2.76 is latest release). I'll check on this - we had another bug regarding normal transform from Python reported recently and a fix was committed.

As sorry, my mistake *(2.76 is latest release)*. I'll check on this - we had another bug regarding normal transform from Python reported recently and a fix was committed.
Author

do you mean this https://developer.blender.org/T46003 ?

Always me :P

Anyway, thank you for your support!

do you mean this https://developer.blender.org/T46003 ? Always me :P Anyway, thank you for your support!

This issue was referenced by blender/blender@137ca0b241

This issue was referenced by blender/blender@137ca0b241f6bda1577121d655d3e0f257dab900
Sign in to join this conversation.
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender-addons#46741
No description provided.