Fix T46741: Transform ignores constraint space

Calling transform operator from Python didn't apply the constraints space.